--- a/src/Components/Sucursales/TablaSucursales.css
+++ b/src/Components/Sucursales/TablaSucursales.css
@@ -223,7 +223,9 @@
   }
 
   .btnEliminar {
-    padding: 10px 35px;
+    width: 50px;
+    height: 50px;
+    padding: 10px 10px;
     cursor: pointer;
     background-color: #ac1818;
     border-radius: 6px;
@@ -239,8 +241,15 @@
     margin: auto;
   }
 
+  .btnEliminar svg {
+    width: 25px; /* Ajusta el tamaño del SVG */
+    height: 25px;
+}
+
   .btnActualizar {
-    padding: 10px 35px;
+    width: 50px;
+    height: 50px;
+    padding: 10px 10px;
     cursor: pointer;
     background-color: #2141ce;
     border-radius: 6px;
@@ -255,6 +264,11 @@
     display: inline-block; /* Asegúrate de que el botón sea un elemento en línea */
     margin: auto;
   }
+
+  .btnActualizar svg {
+    width: 25px; /* Ajusta el tamaño del SVG */
+    height: 25px;
+}
 
   .btnEliminar:hover,
   .btnActualizar:hover {
